[package]
name = "rust_hawktracer"
version = "0.2.0"
authors = ["Alexandru Ene <alex.ene0x11@gmail.com>"]
build = "build.rs"
links = "hawktracer"
description = "Rust bindings for hawktracer profiling library."
keywords = ["profiling"]
categories = ["development-tools::profiling"]
repository = "https://github.com/AlexEne/rust_hawktracer"
readme = "README.md"
license = "MIT/Apache-2.0"

[build-dependencies]
cmake = "0.1"

[build-dependencies.bindgen]
version = "0.37.0"
optional = true

[features]
profiling_enabled = []
generate_bindings=["bindgen"]
