[package]
name = "rust_hawktracer"
version = "0.7.0"
authors = ["Alexandru Ene <alex.ene0x11@gmail.com>"]
description = "Rust bindings for hawktracer profiling library."
keywords = ["profiling"]
categories = ["development-tools::profiling"]
repository = "https://github.com/AlexEne/rust_hawktracer"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
profiling_enabled = ["rust_hawktracer_normal_macro/profiling_enabled", "rust_hawktracer_proc_macro/profiling_enabled"]
generate_bindings = ["rust_hawktracer_normal_macro/generate_bindings"]
pkg_config = ["rust_hawktracer_normal_macro/pkg_config"]

[dependencies.rust_hawktracer_normal_macro]
version = "0.4"

[dependencies.rust_hawktracer_proc_macro]
version = "0.4"
